syntax = "proto3";

package user.enums;

option go_package = "api/user";

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_MERCHANT = 1;
  USER_TYPE_CUSTOMER = 2;
}